--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate = "Enter username">
-						<input class="input100" formControlName="username" type="text" name="username" placeholder="Username" >
+						<input class="input100" formControlName="username" type="text" name="username" placeholder="Email Id" >
 						<span class="focus-input100" data-placeholder="&#61447;"></span>
 
 						<div *ngIf="username.touched && username.invalid" class="alert alert-danger">
