--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -205,10 +205,10 @@ iframe {
   padding: 55px 55px 37px 55px;
 
   background: #9152f8;
-  background: -webkit-linear-gradient(top, #7579ff, #b224ef);
-  background: -o-linear-gradient(top, #7579ff, #b224ef);
-  background: -moz-linear-gradient(top, #7579ff, #b224ef);
-  background: linear-gradient(top, #7579ff, #b224ef);
+  background: -webkit-linear-gradient(to left, #7579ff, #b224ef);
+  background: -o-linear-gradient(to left, #7579ff, #b224ef);
+  background: -moz-linear-gradient(to left, #7579ff, #b224ef);
+  background: linear-gradient(to left, #7579ff, #b224ef);
 }
 /* Safari 4.0 - 8.0 */
 @-webkit-keyframes mymove {
@@ -446,10 +446,10 @@ iframe {
   border-radius: 25px;
 
   background: #9152f8;
-  background: -webkit-linear-gradient(bottom, #7579ff, #b224ef);
-  background: -o-linear-gradient(bottom, #7579ff, #b224ef);
-  background: -moz-linear-gradient(bottom, #7579ff, #b224ef);
-  background: linear-gradient(bottom, #7579ff, #b224ef);
+  background: -webkit-linear-gradient(to left, #7579ff, #b224ef);
+  background: -o-linear-gradient(to left, #7579ff, #b224ef);
+  background: -moz-linear-gradient(to left, #7579ff, #b224ef);
+  background: linear-gradient(to left, #7579ff, #b224ef);
   position: relative;
   z-index: 1;
 
