--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,128 +1,137 @@
 body{
-    margin-top: auto;
-      background-color: #f1f1f1;
-    }
-    .border{
-      border-bottom:1px solid #F1F1F1;
-      margin-bottom:10px;
-    }
-    .main-secction{
-      box-shadow: 10px 10px 10px;
-    }
-    .image-section{
-      padding: 0px;
-    }
-    .image-section img{
-      width: 100%;
-      height:400px;
-      position: relative;
-    }
-    .user-image{
-      position: absolute;
-      margin-top:-50px;
-    }
-    .user-left-part{
-      margin: 0px;
-    }
-    .user-image img{
-      width:170px;
-      height:170px;
-    }
-    .rounded-circle {
-        border-radius: 50%!important;
-    }
-    .user-profil-part{
-      padding-bottom:30px;
-      background-color:#FAFAFA;
-    }
-    .follow{    
-      margin-top:130px;   
-    }
-    .user-detail-row{
-      margin:0px; 
-    }
-    .user-detail-section2 p{
-      font-size:12px;
-      padding: 0px;
-      margin: 0px;
-    }
-    .user-detail-section2{
-      margin-top:10px;
-    }
-    .user-detail-section2 span{
-      color:#7CBBC3;
-      font-size: 20px;
-    }
-    .user-detail-section2 small{
-      font-size:12px;
-      color:#D3A86A;
-    }
-    .profile-right-section{
-      padding: 20px 0px 10px 15px;
-      background-color: #FFFFFF;  
-    }
-    .profile-right-section-row{
-      margin: 0px;
-    }
-    .profile-header-section1 h1{
-      font-size: 25px;
-      margin: 0px;
-    }
-    .profile-header-section1 h5{
-      color: #0062cc;
-    }
-    .req-btn{
-      height:30px;
-      font-size:12px;
-    }
-    .profile-tag{
-      padding: 10px;
-      border:1px solid #F6F6F6;
-    }
-    .profile-tag p{
-      font-size: 12px;
-      color:black;
-    }
-    .profile-tag i{
-      color:#ADADAD;
-      font-size: 20px;
-    }
-    .image-right-part{
-      background-color: #FCFCFC;
-      margin: 0px;
-      padding: 5px;
-    }
-    .img-main-rightPart{
-      background-color: #FCFCFC;
-      margin-top: auto;
-    }
-    .image-right-detail{
-      padding: 0px;
-    }
-    .image-right-detail p{
-      font-size: 12px;
-    }
-    .image-right-detail a:hover{
-      text-decoration: none;
-    }
-    .image-right img{
-      width: 100%;
-    }
-    .image-right-detail-section2{
-      margin: 0px;
-    }
-    .image-right-detail-section2 p{
-      color:#38ACDF;
-      margin:0px;
-    }
-    .image-right-detail-section2 span{
-      color:#7F7F7F;
-    }
-  
-    .nav-link{
-      font-size: 1.2em;    
-    }
-    label {
-        display: inline-block;
-        margin-bottom: .5rem;
-    }
+margin-top: auto;
+/* background-color: #f1f1f1; */
+background: linear-gradient(to right, #ddc5c5, #1a237e); 
+height: 117%;
+width: 100%;
+}
+
+.border{
+border-bottom:1px solid #F1F1F1;
+margin-bottom:10px;
+}
+.main-secction{
+box-shadow: 10px 10px 10px;
+background: linear-gradient(to right, #e9f8e7, #fdd0ec); 
+}
+.image-section{
+padding: 0px;
+}
+.image-section img{
+
+min-height: 400px;
+max-height: 1000px;
+max-width: 400px;
+min-width: 400px;
+position: relative;
+border-radius: 3%!important;
+}
+.user-image{
+position: absolute;
+margin-top:-50px;
+}
+.user-left-part{
+margin: 0px;
+}
+.user-image img{
+width:170px;
+height:170px;
+}
+.rounded-circle {
+border-radius: 50%!important;
+}
+.user-profil-part{
+padding-bottom:30px;
+/* background-color:#FAFAFA; */
+}
+.follow{    
+margin-top:130px;   
+}
+.user-detail-row{
+margin:0px; 
+}
+.user-detail-section2 p{
+font-size:12px;
+padding: 0px;
+margin: 0px;
+}
+.user-detail-section2{
+margin-top:10px;
+}
+.user-detail-section2 span{
+color:#7CBBC3;
+font-size: 20px;
+}
+.user-detail-section2 small{
+font-size:12px;
+color:#D3A86A;
+}
+.profile-right-section{
+padding: 20px 0px 10px 15px;
+/* background-color: #FFFFFF;   */
+}
+.profile-right-section-row{
+margin: 0px;
+}
+.profile-header-section1 h1{
+font-size: 25px;
+margin: 0px;
+}
+.profile-header-section1 h5{
+color: #0062cc;
+}
+.req-btn{
+height:30px;
+font-size:12px;
+}
+.profile-tag{
+padding: 10px;
+border:1px solid #F6F6F6;
+}
+.profile-tag p{
+font-size: 12px;
+color:black;
+}
+.profile-tag i{
+color:#ADADAD;
+font-size: 20px;
+}
+.image-right-part{
+background-color: #FCFCFC;
+margin: 0px;
+padding: 5px;
+}
+.img-main-rightPart{
+background-color: #FCFCFC;
+margin-top: auto;
+}
+.image-right-detail{
+padding: 0px;
+}
+.image-right-detail p{
+font-size: 12px;
+}
+.image-right-detail a:hover{
+text-decoration: none;
+}
+.image-right img{
+width: 100%;
+}
+.image-right-detail-section2{
+margin: 0px;
+}
+.image-right-detail-section2 p{
+color:#38ACDF;
+margin:0px;
+}
+.image-right-detail-section2 span{
+color:#7F7F7F;
+}
+
+.nav-link{
+font-size: 1.2em;    
+}
+label {
+display: inline-block;
+margin-bottom: .5rem;
+}
