--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,32 +1,34 @@
 <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> -->
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 
 <body>
     <div class="container main-secction">
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12 image-section">
-                <img src="../../assets/images/44832282_2017504298292366_1031266555947646976_n.jpg">
+                <img [src]="timeline">
             </div>
             <div class="row user-left-part">
                 <div class="col-md-3 col-sm-3 col-xs-12 user-profil-part pull-left">
                     <div class="row ">
                         <div class="col-md-12 col-md-12-sm-12 col-xs-12 user-image text-center">
-                            <img src="../../assets/images/43522956_2017504421625687_222246226647580672_n.jpg" class="rounded-circle">
+                            <img [src]="profilePIC"
+                                class="rounded-circle">
                         </div>
                         <div class="col-md-12 col-sm-12 col-xs-12 user-detail-section1 text-center">
-                            <button id="btn-contact" (click)="clearModal()" data-toggle="modal" data-target="#contact" class="btn btn-success btn-block follow">Contact</button> 
-                            <button class="btn btn-warning btn-block">Edit Profile</button>                               
+                            <button id="btn-contact" (click)="clearModal()" data-toggle="modal" data-target="#contact"
+                                class="btn btn-success btn-block follow">Contact</button>
+                            <button (click)="editprofile()" class="btn btn-warning btn-block">Edit Profile</button>
                         </div>
                         <div class="row user-detail-row">
                             <div class="col-md-12 col-sm-12 user-detail-section2 pull-left">
                                 <div class="border"></div>
                                 <p>FOLLOWER</p>
                                 <span>320K</span>
-                            </div>                           
+                            </div>
                         </div>
-                       
+
                     </div>
                 </div>
                 <div class="col-md-9 col-sm-9 col-xs-12 pull-right profile-right-section">
@@ -34,74 +36,86 @@
                         <div class="col-md-12 profile-header">
                             <div class="row">
                                 <div class="col-md-8 col-sm-6 col-xs-6 profile-header-section1 pull-left">
-                                    <h1>Nishant Rai</h1>
+                                    <h1>{{username}}</h1>
                                     <h5>Developer</h5>
                                 </div>
                                 <div class="col-md-4 col-sm-6 col-xs-6 profile-header-section1 text-right pull-rigth">
-                                    <a href="/search" class="btn btn-primary btn-block">Facebook</a>
+                                    <a href="*" class="btn btn-primary btn-block">Facebook</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="row">
                                 <div class="col-md-8">
-                                        <ul class="nav nav-tabs" role="tablist">
-                                                <li class="nav-item">
-                                                  <a class="nav-link active" href="#profile" role="tab" data-toggle="tab"><i class="fas fa-user-circle"></i>Profile Profesional</a>
-                                                </li>
-                                                                                               
-                                              </ul>
-                                              
-                                              <!-- Tab panes -->
-                                              <div class="tab-content">
-                                                <div role="tabpanel" class="tab-pane fade show active" id="profile">
-                                                        <div class="row">
-                                                                <div class="col-md-2">
-                                                                    <label>ID</label>
-                                                                </div>
-                                                                <div class="col-md-6">
-                                                                    <p>509230671</p>
-                                                                </div>
-                                                            </div>
-                                                            <div class="row">
-                                                                <div class="col-md-2">
-                                                                    <label>Nombre</label>
-                                                                </div>
-                                                                <div class="col-md-6">
-                                                                    <p>Juan Perez</p>
-                                                                </div>
-                                                            </div>
-                                                            <div class="row">
-                                                                <div class="col-md-2">
-                                                                    <label>Email</label>
-                                                                </div>
-                                                                <div class="col-md-6">
-                                                                    <p>juanp@gmail.com</p>
-                                                                </div>
-                                                            </div>
-                                                            <div class="row">
-                                                                <div class="col-md-2">
-                                                                    <label>Teléfono</label>
-                                                                </div>
-                                                                <div class="col-md-6">
-                                                                    <p>12345678</p>
-                                                                </div>
-                                                            </div>
-                                                            <div class="row">
-                                                                <div class="col-md-2">
-                                                                    <label>Profesion</label>
-                                                                </div>
-                                                                <div class="col-md-6">
-                                                                    <p>Developer</p>
-                                                                </div>
-                                                            </div>
+                                    <ul class="nav nav-tabs" role="tablist">
+                                        <li class="nav-item">
+                                            <a class="nav-link active" role="tab" data-toggle="tab"><i
+                                                    class="fas fa-user-circle"></i>Profile Profesional</a>
+                                        </li>
+
+                                    </ul>
+
+                                    <!-- Tab panes -->
+                                    <div class="tab-content">
+                                        <div role="tabpanel" class="table table-striped " id="profile">
+                                            <div class="row">
+                                                <div class="col-xs-2">
+                                                    <label>ID </label>
+                                                    
+                                                    
+                                                </div>
+                                                <div class="col-sm-6">
+                                                    <p>No data</p>
                                                 </div>
                                                 
-                                                
-                                              </div>
-                          
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-xs-2">
+                                                    <label>Name</label>
+                                                </div>
+                                                <div class="col-sm-6">
+                                                    <p>{{username}}</p>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-xs-2">
+                                                    <label>Email</label>
+                                                </div>
+                                                <div class="col-sm-6">
+                                                    <p>{{email}}</p>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-xs-2">
+                                                    <label>Mobile No.</label>
+                                                </div>
+                                                <div class="col-sm-6">
+                                                    <p>{{mobile}}</p>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-xs-2">
+                                                    <label>Post</label>
+                                                </div>
+                                                <div class="col-sm-6">
+                                                    <p>{{post}}</p>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-xs-2">
+                                                    <label>Date Of Birth</label>
+                                                </div>
+                                                <div class="col-sm-6">
+                                                    <p>{{dateofbirth}}</p>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+                                    </div>
+
                                 </div>
-                                
+
                             </div>
                         </div>
                     </div>
@@ -110,37 +124,4 @@
         </div>
     </div>
 
-    <div class="modal fade" id="contact" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="contact">Contactarme</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="form-group">
-                        <p for="msj">Se enviará este mensaje a la persona que desea contactar, indicando que te quieres comunicar con el. Para esto debes de ingresar tu información personal.</p>
-                    </div>
-                    <div class="form-group">
-                        <label for="txtFullname">Nombre completo</label>
-                        <input type="text" id="txtFullname" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label for="txtEmail">Email</label>
-                        <input type="text" id="txtEmail" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label for="txtPhone">Teléfono</label>
-                        <input type="text" id="txtPhone" class="form-control">
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-primary" (click)="openModal()" data-dismiss="modal">Guardar</button>
-                </div>
-            </div>
-        </div>
-    </div>
 </body>
