--- a/src/app/question-form/question-form.component.css
+++ b/src/app/question-form/question-form.component.css
@@ -97,10 +97,10 @@ div {margin: 20px 0px 10px 10px; }
     padding: 55px 55px 37px 55px;
   
     background: #9152f8;
-    background: -webkit-linear-gradient(top, #7579ff, #b224ef);
-    background: -o-linear-gradient(top, #7579ff, #b224ef);
-    background: -moz-linear-gradient(top, #7579ff, #b224ef);
-    background: linear-gradient(top, #7579ff, #b224ef);
+    background: -webkit-linear-gradient(to left, #7579ff, #b224ef);
+    background: -o-linear-gradient(to left, #7579ff, #b224ef);
+    background: -moz-linear-gradient(to left, #7579ff, #b224ef);
+    background: linear-gradient(to left, #7579ff, #b224ef);
   }
 
   /*------------------------------------------------------------------
@@ -135,10 +135,10 @@ div {margin: 20px 0px 10px 10px; }
   border-radius: 25px;
 
   background: #9152f8;
-  background: -webkit-linear-gradient(bottom, #7579ff, #b224ef);
-  background: -o-linear-gradient(bottom, #7579ff, #b224ef);
-  background: -moz-linear-gradient(bottom, #7579ff, #b224ef);
-  background: linear-gradient(bottom, #7579ff, #b224ef);
+  background: -webkit-linear-gradient(to left, #7579ff, #b224ef);
+  background: -o-linear-gradient(to left, #7579ff, #b224ef);
+  background: -moz-linear-gradient(to left, #7579ff, #b224ef);
+  background: linear-gradient(to left, #7579ff, #b224ef);
   position: relative;
   z-index: 1;
 
@@ -210,10 +210,10 @@ div {margin: 20px 0px 10px 10px; }
   border-radius: 25px;
 
   background: #9152f8;
-  background: -webkit-linear-gradient(bottom, #7579ff, #b224ef);
-  background: -o-linear-gradient(bottom, #7579ff, #b224ef);
-  background: -moz-linear-gradient(bottom, #7579ff, #b224ef);
-  background: linear-gradient(bottom, #7579ff, #b224ef);
+  background: -webkit-linear-gradient(to left, #7579ff, #b224ef);
+  background: -o-linear-gradient(to left, #7579ff, #b224ef);
+  background: -moz-linear-gradient(to left, #7579ff, #b224ef);
+  background: linear-gradient(to left, #7579ff, #b224ef);
   position: relative;
   z-index: 1;
 
