--- a/src/app/question-form/question-form.component.html
+++ b/src/app/question-form/question-form.component.html
@@ -16,6 +16,8 @@
                                                 xls</button>
                                         <button type="button" class="btn btn-default" (click)="manu()">upload
                                                 manually</button>
+                                        <button type="button" class="btn btn-default" (click)="viewQuestion()">View 
+                                                        Question</button>
 
                                 </div>
                                 <div *ngIf=isCollapsed>
@@ -32,7 +34,7 @@
                                         </div>
 
                                         <div class="form-group">
-                                                <input type="file" name="profile" (change)="onSelectedFile($event)" />
+                                                <input type="file" name="profile" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" (change)="onSelectedFile($event)" />
 
                                         </div>
                                         <div class="container-login100-form-btn">
@@ -107,10 +109,49 @@
 
                                                 <div class="clear-float"></div>
 
-                                                <div class="label-container">Currect option</div>
+                                                <div class="label-container">E</div>
                                                 <div class="input-container">
                                                         <i class="fa fa-envelope first-signup-icon"></i>
-                                                        <input type="text" formControlName="Currect_ANS"
+                                                        <input type="text" formControlName="Answer_E"
+                                                                class="form-control" />
+                                                        <div class="clearfix"></div>
+                                                </div>
+
+                                                <div class="clear-float"></div>
+
+                                                <div class="label-container">F</div>
+                                                <div class="input-container">
+                                                        <i class="fa fa-envelope first-signup-icon"></i>
+                                                        <input type="text" formControlName="Answer_F"
+                                                                class="form-control" />
+                                                        <div class="clearfix"></div>
+                                                </div>
+
+                                                <div class="clear-float"></div>
+
+                                                <div class="label-container">Currect option</div>
+                                                <div class="input-container">
+                                                        <i class="fa fa-envelope first-signup-icon"></i>                           
+
+                                                        <section class="example-section" formControlName="Currect_ANS" (click)="changeValue($event)" >
+                                                          <mat-checkbox class="example-margin" value="143"  >A</mat-checkbox>
+                                                          <mat-checkbox class="example-margin"  >B</mat-checkbox>
+                                                          <mat-checkbox class="example-margin"  >C</mat-checkbox>
+                                                          <mat-checkbox class="example-margin"  >D</mat-checkbox>
+                                                        </section>
+                                                    
+                                                        <!-- <section class="example-section"> -->
+                                                        <!-- <input type="text" formControlName="Currect_ANS"
+                                                                class="form-control" /> -->
+                                                        <div class="clearfix"></div>
+                                                </div>
+
+                                                <div class="clear-float"></div>
+
+                                                <div class="label-container">language</div>
+                                                <div class="input-container">
+                                                        <i class="fa fa-envelope first-signup-icon"></i>
+                                                        <input type="text" formControlName="language"
                                                                 class="form-control" />
                                                         <div class="clearfix"></div>
                                                 </div>
