--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,11 @@
 @import "~bootstrap/dist/css/bootstrap.css" ;
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.mat-checkbox-inner-container
+{
+  background-color: violet!important;
+}
+.mat-checkbox-background
+{
+    background-color: none!important;
+}
